--- a/Pages/ProjectList.html
+++ b/Pages/ProjectList.html
@@ -7,7 +7,7 @@
 	
 	<body>
 		<div class = "NavigationBar">
-			<a href = "index.html"> Home </a>
+			<a href = "../index.html"> Home </a>
 			<a href = "AboutMe.html"> About Me </a>
 			<a> Project List </a>
 		</div>
