--- a/Pages/AboutMe.html
+++ b/Pages/AboutMe.html
@@ -14,7 +14,7 @@
 	
 	<body>
 		<div class = "NavigationBar">
-			<a href = "index.html"> Home </a>
+			<a href = "../index.html"> Home </a>
 			<a> About Me </a> 
 			<a href = "ProjectList.html"> Project List </a>
 		
