--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head> <title> Home </title>
 		<script src = "https://use.fontawesome.com/d1341f9b7a.js"></script>
-		<link href = "../CSS/style.css" rel = "stylesheet" type = "text/css">
+		<link href = "CSS/style.css" rel = "stylesheet" type = "text/css">
 		<link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
 		<style> 
 			body{
-				background-image: url("../Images/background.jpg");
+				background-image: url("Images/background.jpg");
 				background-repeat: no-repeat;
 				background-size: cover;
 				}	
@@ -16,12 +16,12 @@
 	
 		<div class = "NavigationBar">
 			<a> Home </a> 
-			<a href = "AboutMe.html"> About Me </a>
+			<a href = "Pages/AboutMe.html"> About Me </a>
 			<a href = "ProjectList.html"> Project List </a>
 		</div>
 		
 		<div class = "box">
-			<img src = "../Images/Jisoo.jpg" alt = "" class = "box-img">
+			<img src = "Images/Jisoo.jpg" alt = "" class = "box-img">
 			<h1> Jacky Tran</h1>
 			<h5> Software developer </h5>
 			<p> Hey guys! I am an aspiring software developer who aims to git gud at this thing. 
